--- a/public/themes/default/public/footer/footer.html
+++ b/public/themes/default/public/footer/footer.html
@@ -23,7 +23,8 @@
         </div>
         <div class="footer_box_top_link_item">
           <div class="footer_box_top_link_item_title">Beijing</div>
-          <div class="footer_box_top_link_item_subitem">Room 1710, Building A, Wanda Plaza, Chaoyang, Beijing, China</div>
+          <div class="footer_box_top_link_item_subitem">Room 1710, Building A, Wanda Plaza, Chaoyang, Beijing, China
+          </div>
         </div>
         <div class="footer_box_top_link_item">
           <div class="footer_box_top_link_item_title">Dublin</div>
@@ -31,11 +32,13 @@
         </div>
         <div class="footer_box_top_link_item">
           <div class="footer_box_top_link_item_title">Ennis</div>
-          <div class="footer_box_top_link_item_subitem">Suite 3, Áras Smith O’Brien Bank Place, Ennis, Co.Clare, Ireland</div>
+          <div class="footer_box_top_link_item_subitem">Suite 3, Áras Smith O’Brien Bank Place, Ennis, Co.Clare, Ireland
+          </div>
         </div>
         <div class="footer_box_top_link_item">
           <div class="footer_box_top_link_item_title">Abu Dhabi</div>
-          <div class="footer_box_top_link_item_subitem">14th Floor, Al Khatem Tower, Al Maryah Island, Abu Dhabi, UAE</div>
+          <div class="footer_box_top_link_item_subitem">14th Floor, Al Khatem Tower, Al Maryah Island, Abu Dhabi, UAE
+          </div>
         </div>
       </div>
     </div>
@@ -46,4 +49,5 @@
     </div>
 </footer>
 
-<!-- <a href="{:url('/portal/products')}#footer">跳转到Section 1</a> -->
+
+</script>
