--- a/public/themes/default/public/head/head.html
+++ b/public/themes/default/public/head/head.html
@@ -12,10 +12,14 @@
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
   <title>Celtic International</title>
   <link rel="shortcut icon" href="__TMPL__/static/img/favicon.ico" type="image/x-icon">
+
+  <link rel="stylesheet" href="__TMPL__/static/css/bootstrap.css">
+  <script type="text/javascript" src="__TMPL__/static/js/jquery-1.11.2.min.js"></script>
+  <script src="__TMPL__/static/js/bootstrap.min.js"></script>
+  <script src="__TMPL__/static/js/flexible.js"></script>
   <link rel="stylesheet" href="__TMPL__/static/css/common.css">
   <link rel="stylesheet" href="__TMPL__/static/css/header.css">
   <link rel="stylesheet" href="__TMPL__/static/css/banner.css">
   <link rel="stylesheet" href="__TMPL__/static/css/footer.css">
-  <script src="__TMPL__/static/js/flexible.js"></script>
   <taglib name="app\portal\taglib\Portal" />
 </head>
